--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,13 @@ height: 800px;
 margin-top: 150px;
 margin-left: auto;
 margin-right: auto;
-margin-bottom: auto;
 display: flex;
 justify-content: center;
+
 }
 
 .adobo,.sinigang,.butteredhipon {
-    margin: 10px;
+    margin: 0px;
     text-align: center;
 }
 
@@ -34,7 +34,7 @@ img {
     border-style: groove;
 }
 
-p {
+.links {
     font-size: 30px;
     font-weight: bold;
 }
@@ -43,5 +43,14 @@ h1 {
     font-size: 60px;
 }
 
+.description {
+    font-size: 20px;
+    
+}
 
+/* <!--adobo css --!> */
+
+.ing {
+    padding-right: 20px;
+} 
   
