--- a/recipes/shrimp.css
+++ b/recipes/shrimp.css
@@ -10,10 +10,7 @@ body {
 
 .wrapper {
     display: flex;
-    margin-left: 20px;
-    margin-right: 500px;
-    margin-top: 50px;
-    margin-bottom: auto;
+
     /* background-color: beige; */
 
 }
@@ -37,6 +34,8 @@ h2 {
 }
 
 img {
+    height: 400px;
+    width: auto;
     margin-left: 40px;
     border-style: groove;
 }
