--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    
+}
+
 h1 {
     text-align: center;
     background-color: beige;
@@ -12,13 +16,16 @@ body {
 
 .mgafoods {
 /* background-color: black; */
-width: 1850px;
-height: 800px;
-margin-top: 150px;
+width: 100%;
+height: 500px;
+margin-top: 50px;
 margin-left: auto;
 margin-right: auto;
-display: flex;
-justify-content: center;
+display: grid;
+grid-template-columns: repeat(3,1fr);
+gap: 5px;
+
+
 
 }
 
@@ -26,11 +33,11 @@ justify-content: center;
     margin: 0px;
     text-align: center;
 }
-
+    
 
 img {
-    width: 450px;
-    height: 400px;
+    width: 350px;
+    height: 300px;
     border-style: groove;
 }
 
@@ -53,4 +60,3 @@ h1 {
 .ing {
     padding-right: 20px;
 } 
-  
