--- a/recipes/adobo.css
+++ b/recipes/adobo.css
@@ -17,6 +17,7 @@ body {
 
 .text-book {
     padding-left: 100px;
+    border: 5px black;
     
 }
 
@@ -31,6 +32,7 @@ h2 {
 
 .steps {
     padding-top: 20px;
+    width: 800px;
    
 }
 
